chore: simple calculator

--- a/week9/javascript/index.html
+++ b/week9/javascript/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Week 7 - JavaScript</title>
-    <link rel="stylesheet" href="./flexbox.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <h3>Basic Calculator</h3>
@@ -22,13 +22,21 @@
         <span id="answer_2"></span>
       </div>
       <div>
-        <label>Enter your name:</label>
-        <input class="inputs" type="text" id="name" />
-        <button id="submit">Enter</button>
-        <p id="welcome_message"></p>
+        <input class="inputs" type="number" id="input_5" />
+        <span>x</span>
+        <input class="inputs" type="number" id="input_6" />
+        <button id="submit_3">=</button>
+        <span id="answer_3"></span>
+      </div>
+      <div>
+        <input class="inputs" type="number" id="input_7" />
+        <span>/</span>
+        <input class="inputs" type="number" id="input_8" />
+        <button id="submit_4">=</button>
+        <span id="answer_4"></span>
       </div>
     </div>
 
-    <script src="./script.js"></script>
+    <script src="./calculator-script.js"></script>
   </body>
 </html>
